# pico-project-template

./: CMakeLists.txt
src/: CMakeLists.txt  main.c
